<resources>
    <string name="app_name">CryptoMan</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="symbol">symbol</string>
    <string name="rank">rank #</string>
    <string name="_1">1</string>
    <string name="btc"> BTC</string>
    <string name="equal">=</string>
    <string name="empty"> empty </string>
    <string name="usd"> USD</string>
    <string name="market_cap">Market Cap</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="change_1h">Change (1h)</string>
    <string name="percent">%</string>
    <string name="change_24h">Change (24h)</string>
    <string name="change_7d">Change (7d)</string>
    <string name="course">Course</string>
    <string name="_11111">11111</string>
    <string name="_name">Name</string>
    <string name="EUR">EUR</string>
    <string name="USD">USD</string>
    <string name="RUB">RUB</string>
</resources>
